Finish block GUI texture, redo block texture, add floating ender eye, add tooltip, persist nbt data through block break, adjust crafting recipe and add alt, add lapis slot placeholder, various caching and DRY enhancements